syntax = "proto3";

import "google/protobuf/wrappers.proto";

option java_package = "com.droidconlisbon.sp2ds.proto";
option java_multiple_files = true;


message ListOfString {
  repeated string item = 1;
}

message User {
  string firstName = 1;
  string lastName = 2;
  string picUri = 3;
}


enum MessageType {
  MESSAGE_TYPE_UNSPECIFIED = 0;
  ANSWER = 1;
  QUESTION = 2;
}

// Individual chat message
message ChatMessage {
  string message = 1;
  MessageType messageType = 2;
}

// Wrapper for list of chat messages
message ChatMessageList {
  repeated ChatMessage messages = 1;
}